# libfrizz

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README  README.md
.github/workflows/: ci.yml  linux.yml  release.yml
src/: cli.yaml  lib.rs  main.rs  port_details.rs
test-suite/: Caddyfile  run-tests.sh
