[package]
name = "frizz"
version = "0.1.0"
edition = "2018"
authors = ["{{authors}}"]

[lib]
name = "libfrizz"
crate-type = ["lib"]

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json", "native-tls"] }
tokio = { version = "1.10.1", features = ["full"] }
select = "0.6.0-alpha.1"
clap = { version = "2.33.3", features = ["yaml"] }
ansi_term = "0.12.1"
dprint-core = "0.44.0"
log = "0.4.14"
simple_logger = "1.13.0"

[dev-dependencies]
serial_test = "0.5.1"

