[package]
name = "frizz"
version = "0.1.0"
edition = "2018"
authors = ["{{authors}}"]

[lib]
name = "libfrizz"
crate-type = ["lib"]

[dependencies]
reqwest = { version = "0.11.6", features = ["blocking", "json", "native-tls","stream"] }
tokio = { version = "1.12.0", features = ["full"] }
select = "0.6.0-alpha.1"
clap = { version = "2.33.3", features = ["yaml"] }
ansi_term = "0.12.1"
dprint-core = "0.46.4"
log = "0.4.14"
simple_logger = "1.13.0"
futures = "0.3.17"
indicatif = "0.16.2"
lazy_static = "1.4.0"

[dev-dependencies]
serial_test = "0.5.1"

