[package]
name = "frizz"
version = "0.2.1"
edition = "2018"
authors = ["{{authors}}"]
description = "curl alternative written in rust."
license = "gpl-3.0"
readme = "README.md"
keywords = ["curl", "httpie"]
categories = ["http", "tool"]
repository = "https://github.com/ozkanpakdil/libfrizz"
documentation = "https://github.com/ozkanpakdil/libfrizz"
homepage = "https://github.com/ozkanpakdil/libfrizz"

[lib]
name = "libfrizz"
crate-type = ["lib"]

[dependencies]
reqwest = { version = "0.11.8", features = ["blocking", "json", "native-tls","stream"] }
tokio = { version = "1.15.0", features = ["full"] }
select = "0.6.0-alpha.1"
clap = { version = "2.34.0", features = ["yaml"] }
ansi_term = "0.12.1"
dprint-core = "0.46.4"
log = "0.4.14"
simple_logger = "1.16.0"
futures = "0.3.19"
indicatif = "0.16.2"
lazy_static = "1.4.0"
rstest = "0.12.0"
async-stream = "0.3.2"
tokio-util = "0.6.9"
serde_json = "1.0.73"
home = "0.5.3"
jql = "3.0.6"
regex = "1.5.4"
chrono = "0.4.19"
strum_macros = "0.23.1"
strum = "0.23.0"
itertools = "0.10.3"

[dev-dependencies]
serial_test = "0.5.1"

[package.metadata.deb]
maintainer = "Ozkan Pakdil <ozkan.pakdil+frizz@gmail.com>"
copyright = "2022, Ozkan Pakdil <ozkan.pakdil+frizz@gmail.com>"
license-file = ["LICENSE", "4"]
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/frizz", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/cargo-deb/README", "644"],
]
